# linuxconfigs

./: .bashrc  .inputrc  .vimrc
.config/i3/: config
.config/i3/homeW1/: config
.config/i3/work/: config  restore-tasks.sh  restore-workspace-build.sh  workspace-build.json
.config/vim/: .vimrc_cpp  .vimspector.json  .ycm_extra_conf.py_example
.config/vim/cpp_cmake_template/: .vimrc  CMakeLists.txt  compile_commands.json
.config/vim/cpp_cmake_template/src/: main.cpp
